force-app/main/default/objects/Order/fields/Data_promisa_de_livrare__c.field-meta.xml
<CustomField>
    <fullName>Data_promisa_de_livrare__c</fullName>
    <label>Data promisa de livrare</label>
    <type>Date</type>
</CustomField>