force-app/main/default/objects/Order/fields/Data_solicitata_de_livrare__c.field-meta.xml
<CustomField>
    <fullName>Data_solicitata_de_livrare__c</fullName>
    <label>Data solicitata de livrare</label>
    <type>Date</type>
</CustomField>