force-app/main/default/objects/Order/fields/Insotita_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Insotita_de_factura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insotita de factura</label>
    <type>Checkbox</type>
</CustomField>