force-app/main/default/objects/Order/fields/Observatii__c.field-meta.xml
<CustomField>
    <fullName>Observatii__c</fullName>
    <label>Observatii</label>
    <length>255</length>
    <type>Text</type>
</CustomField>